HW2/y.output
Terminals unused in grammar

   C_COMMENT
   CPLUS_COMMENT


State 201 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list compound_statement
    6                    | declaration_specifiers declarator compound_statement
    7                    | declarator declaration_list compound_statement
    8                    | declarator compound_statement

    9 declaration_specifiers: type_specifier
   10                       | type_specifier declaration_specifiers

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 compound_statement: LCB RCB
   14                   | LCB in_scope statement_list RCB out_scope
   15                   | LCB in_scope declaration_list RCB out_scope
   16                   | LCB in_scope declaration_list statement_list RCB out_scope

   17 declarator: ID
   18           | LB declarator RB
   19           | declarator LSB conditional_expression RSB
   20           | declarator LSB RSB
   21           | declarator LB in_scope parameter_list RB out_scope
   22           | declarator LB in_scope identifier_list RB out_scope
   23           | declarator LB RB

   24 in_scope: %empty

   25 out_scope: %empty

   26 declaration: declaration_specifiers SEMICOLON
   27            | declaration_specifiers init_declarator_list SEMICOLON

   28 statement_list: statement
   29               | statement_list statement

   30 identifier_list: ID
   31                | identifier_list COMMA ID

   32 init_declarator_list: init_declarator
   33                     | init_declarator_list COMMA init_declarator

   34 statement: compound_statement
   35          | expression_statement
   36          | selection_statement
   37          | iteration_statement
   38          | jump_statement
   39          | print_statement

   40 conditional_expression: logical_or_expression

   41 parameter_list: parameter_declaration
   42               | parameter_list COMMA parameter_declaration

   43 init_declarator: declarator
   44                | declarator ASGN initializer

   45 expression_statement: COMMA
   46                     | expression SEMICOLON

   47 selection_statement: IF LB expression RB statement
   48                    | IF LB expression RB statement ELSE statement

   49 iteration_statement: WHILE LB expression RB statement
   50                    | FOR LB expression_statement expression_statement RB statement
   51                    | FOR LB expression_statement expression_statement expression RB statement

   52 jump_statement: CONT SEMICOLON
   53               | BREAK SEMICOLON
   54               | RET SEMICOLON
   55               | RET expression SEMICOLON

   56 print_statement: PRINT LB ID RB SEMICOLON
   57                | PRINT LB QUOTA STR_CONST QUOTA RB SEMICOLON

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression OR logical_and_expression

   60 expression: assignment_expression
   61           | expression COMMA assignment_expression

   62 parameter_declaration: declaration_specifiers declarator
   63                      | declaration_specifiers

   64 initializer: assignment_expression
   65            | LCB initializer_list RCB
   66            | LCB initializer_list COMMA RCB

   67 logical_and_expression: inclusive_or_expression
   68                       | logical_and_expression AND inclusive_or_expression

   69 assignment_expression: conditional_expression
   70                      | unary_expression assignment_operator assignment_expression

   71 initializer_list: initializer
   72                 | initializer_list SEMICOLON initializer

   73 inclusive_or_expression: exclusive_or_expression

   74 unary_expression: postfix_expression
   75                 | INC unary_expression
   76                 | DEC unary_expression
   77                 | unary_operator unary_expression

   78 assignment_operator: ASGN
   79                    | ADDASGN
   80                    | SUBASGN
   81                    | MULASGN
   82                    | DIVASGN
   83                    | MODASGN

   84 exclusive_or_expression: and_expression

   85 postfix_expression: primary_expression
   86                   | postfix_expression LSB expression RSB
   87                   | postfix_expression LB RB
   88                   | postfix_expression LB argument_expression_list RB
   89                   | postfix_expression INC
   90                   | postfix_expression DEC

   91 unary_operator: ADD
   92               | SUB
   93               | NOT

   94 and_expression: equality_expression

   95 primary_expression: ID
   96                   | I_CONST
   97                   | F_CONST
   98                   | QUOTA STR_CONST QUOTA
   99                   | TRUE
  100                   | FALSE
  101                   | LB expression RB

  102 argument_expression_list: assignment_expression
  103                         | argument_expression_list COMMA assignment_expression

  104 equality_expression: relational_expression
  105                    | equality_expression EQ relational_expression
  106                    | equality_expression NE relational_expression

  107 relational_expression: additive_expression
  108                      | relational_expression LT additive_expression
  109                      | relational_expression MT additive_expression
  110                      | relational_expression LTE additive_expression
  111                      | relational_expression MTE additive_expression

  112 additive_expression: multiplicative_expression
  113                    | additive_expression ADD multiplicative_expression
  114                    | additive_expression SUB multiplicative_expression

  115 multiplicative_expression: unary_expression
  116                          | multiplicative_expression MUL unary_expression
  117                          | multiplicative_expression DIV unary_expression
  118                          | multiplicative_expression MOD unary_expression

  119 type_specifier: INT
  120               | FLOAT
  121               | BOOL
  122               | STRING
  123               | VOID


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 91 113
SUB (259) 92 114
MUL (260) 116
DIV (261) 117
MOD (262) 118
INC (263) 75 89
DEC (264) 76 90
MT (265) 109
LT (266) 108
MTE (267) 111
LTE (268) 110
EQ (269) 105
NE (270) 106
ASGN (271) 44 78
ADDASGN (272) 79
SUBASGN (273) 80
MULASGN (274) 81
DIVASGN (275) 82
MODASGN (276) 83
AND (277) 68
OR (278) 59
NOT (279) 93
LB (280) 18 21 22 23 47 48 49 50 51 56 57 87 88 101
RB (281) 18 21 22 23 47 48 49 50 51 56 57 87 88 101
LCB (282) 13 14 15 16 65 66
RCB (283) 13 14 15 16 65 66
LSB (284) 19 20 86
RSB (285) 19 20 86
COMMA (286) 31 33 42 45 61 66 103
IF (287) 47 48
ELSE (288) 48
FOR (289) 50 51
WHILE (290) 49
BREAK (291) 53
CONT (292) 52
PRINT (293) 56 57
RET (294) 54 55
QUOTA (295) 57 98
ID (296) 17 30 31 56 95
SEMICOLON (297) 26 27 46 52 53 54 55 56 57 72
C_COMMENT (298)
CPLUS_COMMENT (299)
I_CONST (300) 96
F_CONST (301) 97
STR_CONST (302) 57 98
STRING (303) 122
INT (304) 119
FLOAT (305) 120
BOOL (306) 121
VOID (307) 123
TRUE (308) 99
FALSE (309) 100


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
translation_unit (56)
    on left: 1 2, on right: 0 2
external_declaration (57)
    on left: 3 4, on right: 1 2
function_definition (58)
    on left: 5 6 7 8, on right: 3
declaration_specifiers (59)
    on left: 9 10, on right: 5 6 10 26 27 62 63
declaration_list (60)
    on left: 11 12, on right: 5 7 12 15 16
compound_statement (61)
    on left: 13 14 15 16, on right: 5 6 7 8 34
declarator (62)
    on left: 17 18 19 20 21 22 23, on right: 5 6 7 8 18 19 20 21 22
    23 43 44 62
in_scope (63)
    on left: 24, on right: 14 15 16 21 22
out_scope (64)
    on left: 25, on right: 14 15 16 21 22
declaration (65)
    on left: 26 27, on right: 4 11 12
statement_list (66)
    on left: 28 29, on right: 14 16 29
identifier_list (67)
    on left: 30 31, on right: 22 31
init_declarator_list (68)
    on left: 32 33, on right: 27 33
statement (69)
    on left: 34 35 36 37 38 39, on right: 28 29 47 48 49 50 51
conditional_expression (70)
    on left: 40, on right: 19 69
parameter_list (71)
    on left: 41 42, on right: 21 42
init_declarator (72)
    on left: 43 44, on right: 32 33
expression_statement (73)
    on left: 45 46, on right: 35 50 51
selection_statement (74)
    on left: 47 48, on right: 36
iteration_statement (75)
    on left: 49 50 51, on right: 37
jump_statement (76)
    on left: 52 53 54 55, on right: 38
print_statement (77)
    on left: 56 57, on right: 39
logical_or_expression (78)
    on left: 58 59, on right: 40 59
expression (79)
    on left: 60 61, on right: 46 47 48 49 51 55 61 86 101
parameter_declaration (80)
    on left: 62 63, on right: 41 42
initializer (81)
    on left: 64 65 66, on right: 44 71 72
logical_and_expression (82)
    on left: 67 68, on right: 58 59 68
assignment_expression (83)
    on left: 69 70, on right: 60 61 64 70 102 103
initializer_list (84)
    on left: 71 72, on right: 65 66 72
inclusive_or_expression (85)
    on left: 73, on right: 67 68
unary_expression (86)
    on left: 74 75 76 77, on right: 70 75 76 77 115 116 117 118
assignment_operator (87)
    on left: 78 79 80 81 82 83, on right: 70
exclusive_or_expression (88)
    on left: 84, on right: 73
postfix_expression (89)
    on left: 85 86 87 88 89 90, on right: 74 86 87 88 89 90
unary_operator (90)
    on left: 91 92 93, on right: 77
and_expression (91)
    on left: 94, on right: 84
primary_expression (92)
    on left: 95 96 97 98 99 100 101, on right: 85
argument_expression_list (93)
    on left: 102 103, on right: 88 103
equality_expression (94)
    on left: 104 105 106, on right: 94 105 106
relational_expression (95)
    on left: 107 108 109 110 111, on right: 104 105 106 108 109 110
    111
additive_expression (96)
    on left: 112 113 114, on right: 107 108 109 110 111 113 114
multiplicative_expression (97)
    on left: 115 116 117 118, on right: 112 113 114 116 117 118
type_specifier (98)
    on left: 119 120 121 122 123, on right: 9 10


State 0

    0 $accept: . translation_unit $end

    LB      shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    translation_unit        go to state 8
    external_declaration    go to state 9
    function_definition     go to state 10
    declaration_specifiers  go to state 11
    declarator              go to state 12
    declaration             go to state 13
    type_specifier          go to state 14


State 1

   18 declarator: LB . declarator RB

    LB  shift, and go to state 1
    ID  shift, and go to state 2

    declarator  go to state 15


State 2

   17 declarator: ID .

    $default  reduce using rule 17 (declarator)


State 3

  122 type_specifier: STRING .

    $default  reduce using rule 122 (type_specifier)


State 4

  119 type_specifier: INT .

    $default  reduce using rule 119 (type_specifier)


State 5

  120 type_specifier: FLOAT .

    $default  reduce using rule 120 (type_specifier)


State 6

  121 type_specifier: BOOL .

    $default  reduce using rule 121 (type_specifier)


State 7

  123 type_specifier: VOID .

    $default  reduce using rule 123 (type_specifier)


State 8

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end    shift, and go to state 16
    LB      shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    external_declaration    go to state 17
    function_definition     go to state 10
    declaration_specifiers  go to state 11
    declarator              go to state 12
    declaration             go to state 13
    type_specifier          go to state 14


State 9

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 10

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 11

    5 function_definition: declaration_specifiers . declarator declaration_list compound_statement
    6                    | declaration_specifiers . declarator compound_statement
   26 declaration: declaration_specifiers . SEMICOLON
   27            | declaration_specifiers . init_declarator_list SEMICOLON

    LB         shift, and go to state 1
    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 18

    declarator            go to state 19
    init_declarator_list  go to state 20
    init_declarator       go to state 21


State 12

    7 function_definition: declarator . declaration_list compound_statement
    8                    | declarator . compound_statement
   19 declarator: declarator . LSB conditional_expression RSB
   20           | declarator . LSB RSB
   21           | declarator . LB in_scope parameter_list RB out_scope
   22           | declarator . LB in_scope identifier_list RB out_scope
   23           | declarator . LB RB

    LB      shift, and go to state 22
    LCB     shift, and go to state 23
    LSB     shift, and go to state 24
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    declaration_specifiers  go to state 25
    declaration_list        go to state 26
    compound_statement      go to state 27
    declaration             go to state 28
    type_specifier          go to state 14


State 13

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 14

    9 declaration_specifiers: type_specifier .
   10                       | type_specifier . declaration_specifiers

    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    $default  reduce using rule 9 (declaration_specifiers)

    declaration_specifiers  go to state 29
    type_specifier          go to state 14


State 15

   18 declarator: LB declarator . RB
   19           | declarator . LSB conditional_expression RSB
   20           | declarator . LSB RSB
   21           | declarator . LB in_scope parameter_list RB out_scope
   22           | declarator . LB in_scope identifier_list RB out_scope
   23           | declarator . LB RB

    LB   shift, and go to state 22
    RB   shift, and go to state 30
    LSB  shift, and go to state 24


State 16

    0 $accept: translation_unit $end .

    $default  accept


State 17

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 18

   26 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 26 (declaration)


State 19

    5 function_definition: declaration_specifiers declarator . declaration_list compound_statement
    6                    | declaration_specifiers declarator . compound_statement
   19 declarator: declarator . LSB conditional_expression RSB
   20           | declarator . LSB RSB
   21           | declarator . LB in_scope parameter_list RB out_scope
   22           | declarator . LB in_scope identifier_list RB out_scope
   23           | declarator . LB RB
   43 init_declarator: declarator .
   44                | declarator . ASGN initializer

    ASGN    shift, and go to state 31
    LB      shift, and go to state 22
    LCB     shift, and go to state 23
    LSB     shift, and go to state 24
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    $default  reduce using rule 43 (init_declarator)

    declaration_specifiers  go to state 25
    declaration_list        go to state 32
    compound_statement      go to state 33
    declaration             go to state 28
    type_specifier          go to state 14


State 20

   27 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   33 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 34
    SEMICOLON  shift, and go to state 35


State 21

   32 init_declarator_list: init_declarator .

    $default  reduce using rule 32 (init_declarator_list)


State 22

   21 declarator: declarator LB . in_scope parameter_list RB out_scope
   22           | declarator LB . in_scope identifier_list RB out_scope
   23           | declarator LB . RB

    RB  shift, and go to state 36

    $default  reduce using rule 24 (in_scope)

    in_scope  go to state 37


State 23

   13 compound_statement: LCB . RCB
   14                   | LCB . in_scope statement_list RCB out_scope
   15                   | LCB . in_scope declaration_list RCB out_scope
   16                   | LCB . in_scope declaration_list statement_list RCB out_scope

    RCB  shift, and go to state 38

    $default  reduce using rule 24 (in_scope)

    in_scope  go to state 39


State 24

   19 declarator: declarator LSB . conditional_expression RSB
   20           | declarator LSB . RSB

    ADD      shift, and go to state 40
    SUB      shift, and go to state 41
    INC      shift, and go to state 42
    DEC      shift, and go to state 43
    NOT      shift, and go to state 44
    LB       shift, and go to state 45
    RSB      shift, and go to state 46
    QUOTA    shift, and go to state 47
    ID       shift, and go to state 48
    I_CONST  shift, and go to state 49
    F_CONST  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52

    conditional_expression     go to state 53
    logical_or_expression      go to state 54
    logical_and_expression     go to state 55
    inclusive_or_expression    go to state 56
    unary_expression           go to state 57
    exclusive_or_expression    go to state 58
    postfix_expression         go to state 59
    unary_operator             go to state 60
    and_expression             go to state 61
    primary_expression         go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66


State 25

   26 declaration: declaration_specifiers . SEMICOLON
   27            | declaration_specifiers . init_declarator_list SEMICOLON

    LB         shift, and go to state 1
    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 18

    declarator            go to state 67
    init_declarator_list  go to state 20
    init_declarator       go to state 21


State 26

    7 function_definition: declarator declaration_list . compound_statement
   12 declaration_list: declaration_list . declaration

    LCB     shift, and go to state 23
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    declaration_specifiers  go to state 25
    compound_statement      go to state 68
    declaration             go to state 69
    type_specifier          go to state 14


State 27

    8 function_definition: declarator compound_statement .

    $default  reduce using rule 8 (function_definition)


State 28

   11 declaration_list: declaration .

    $default  reduce using rule 11 (declaration_list)


State 29

   10 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 10 (declaration_specifiers)


State 30

   18 declarator: LB declarator RB .

    $default  reduce using rule 18 (declarator)


State 31

   44 init_declarator: declarator ASGN . initializer

    ADD      shift, and go to state 40
    SUB      shift, and go to state 41
    INC      shift, and go to state 42
    DEC      shift, and go to state 43
    NOT      shift, and go to state 44
    LB       shift, and go to state 45
    LCB      shift, and go to state 70
    QUOTA    shift, and go to state 47
    ID       shift, and go to state 48
    I_CONST  shift, and go to state 49
    F_CONST  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52

    conditional_expression     go to state 71
    logical_or_expression      go to state 54
    initializer                go to state 72
    logical_and_expression     go to state 55
    assignment_expression      go to state 73
    inclusive_or_expression    go to state 56
    unary_expression           go to state 74
    exclusive_or_expression    go to state 58
    postfix_expression         go to state 59
    unary_operator             go to state 60
    and_expression             go to state 61
    primary_expression         go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66


State 32

    5 function_definition: declaration_specifiers declarator declaration_list . compound_statement
   12 declaration_list: declaration_list . declaration

    LCB     shift, and go to state 23
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    declaration_specifiers  go to state 25
    compound_statement      go to state 75
    declaration             go to state 69
    type_specifier          go to state 14


State 33

    6 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 6 (function_definition)


State 34

   33 init_declarator_list: init_declarator_list COMMA . init_declarator

    LB  shift, and go to state 1
    ID  shift, and go to state 2

    declarator       go to state 67
    init_declarator  go to state 76


State 35

   27 declaration: declaration_specifiers init_declarator_list SEMICOLON .

    $default  reduce using rule 27 (declaration)


State 36

   23 declarator: declarator LB RB .

    $default  reduce using rule 23 (declarator)


State 37

   21 declarator: declarator LB in_scope . parameter_list RB out_scope
   22           | declarator LB in_scope . identifier_list RB out_scope

    ID      shift, and go to state 77
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7

    declaration_specifiers  go to state 78
    identifier_list         go to state 79
    parameter_list          go to state 80
    parameter_declaration   go to state 81
    type_specifier          go to state 14


State 38

   13 compound_statement: LCB RCB .

    $default  reduce using rule 13 (compound_statement)


State 39

   14 compound_statement: LCB in_scope . statement_list RCB out_scope
   15                   | LCB in_scope . declaration_list RCB out_scope
   16                   | LCB in_scope . declaration_list statement_list RCB out_scope

    ADD      shift, and go to state 40
    SUB      shift, and go to state 41
    INC      shift, and go to state 42
    DEC      shift, and go to state 43
    NOT      shift, and go to state 44
    LB       shift, and go to state 45
    LCB      shift, and go to state 23
    COMMA    shift, and go to state 82
    IF       shift, and go to state 83
    FOR      shift, and go to state 84
    WHILE    shift, and go to state 85
    BREAK    shift, and go to state 86
    CONT     shift, and go to state 87
    PRINT    shift, and go to state 88
    RET      shift, and go to state 89
    QUOTA    shift, and go to state 47
    ID       shift, and go to state 48
    I_CONST  shift, and go to state 49
    F_CONST  shift, and go to state 50
    STRING   shift, and go to state 3
    INT      shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    VOID     shift, and go to state 7
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52

    declaration_specifiers     go to state 25
    declaration_list           go to state 90
    compound_statement         go to state 91
    declaration                go to state 28
    statement_list             go to state 92
    statement                  go to state 93
    conditional_expression     go to state 71
    expression_statement       go to state 94
    selection_statement        go to state 95
    iteration_statement        go to state 96
    jump_statement             go to state 97
    print_statement            go to state 98
    logical_or_expression      go to state 54
    expression                 go to state 99
    logical_and_expression     go to state 55
    assignment_expression      go to state 100
    inclusive_or_expression    go to state 56
    unary_expression           go to state 74
    exclusive_or_expression    go to state 58
    postfix_expression         go to state 59
    unary_operator             go to state 60
    and_expression             go to state 61
    primary_expression         go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66
    type_specifier             go to state 14


State 40

   91 unary_operator: ADD .

    $default  reduce using rule 91 (unary_operator)


State 41

   92 unary_operator: SUB .

    $default  reduce using rule 92 (unary_operator)


State 42

   75 unary_expression: INC . unary_expression

    ADD      shift, and go to state 40
    SUB      shift, and go to state 41
    INC      shift, and go to state 42
    DEC      shift, and go to state 43
    NOT      shift, and go to state 44
    LB       shift, and go to state 45
    QUOTA    shift, and go to state 47
    ID       shift, and go to state 48
    I_CONST  shift, and go to state 49
    F_CONST  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52

    unary_expression    go to state 101
    postfix_expression  go to state 59
    unary_operator      go to state 60
    primary_expression  go to state 62


State 43

   76 unary_expression: DEC . unary_expression

    ADD      shift, and go to state 40
    SUB      shift, and go to state 41
    INC      shift, and go to state 42
    DEC      shift, and go to state 43
    NOT      shift, and go to state 44
    LB       shift, and go to state 45
    QUOTA    shift, and go to state 47
    ID       shift, and go to state 48
    I_CONST  shift, and go to state 49
    F_CONST  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52

    unary_expression    go to state 102
    postfix_expression  go to state 59
    unary_operator      go to state 60
    primary_expression  go to state 62


State 44

   93 unary_operator: NOT .

    $default  reduce using rule 93 (unary_operator)


State 45

  101 primary_expression: LB . expression RB

    ADD      shift, and go to state 40
    SUB      shift, and go to state 41
    INC      shift, and go to state 42
    DEC      shift, and go to state 43
    NOT      shift, and go to state 44
    LB       shift, and go to state 45
    QUOTA    shift, and go to state 47
    ID       shift, and go to state 48
    I_CONST  shift, and go to state 49
    F_CONST  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52

    conditional_expression     go to state 71
    logical_or_expression      go to state 54
    expression                 go to state 103
    logical_and_expression     go to state 55
    assignment_expression      go to state 100
    inclusive_or_expression    go to state 56
    unary_expression           go to state 74
    exclusive_or_expression    go to state 58
    postfix_expression         go to state 59
    unary_operator             go to state 60
    and_expression             go to state 61
    primary_expression         go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66


State 46

   20 declarator: declarator LSB RSB .

    $default  reduce using rule 20 (declarator)


State 47

   98 primary_expression: QUOTA . STR_CONST QUOTA

    STR_CONST  shift, and go to state 104


State 48

   95 primary_expression: ID .

    $default  reduce using rule 95 (primary_expression)


State 49

   96 primary_expression: I_CONST .

    $default  reduce using rule 96 (primary_expression)


State 50

   97 primary_expression: F_CONST .

    $default  reduce using rule 97 (primary_expression)


State 51

   99 primary_expression: TRUE .
